<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostFragment">

    <EditText
        android:id="@+id/editTextPostAddress"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHeight" />

    <TextView
        android:id="@+id/textViewPostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/newpost"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPostName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/dogname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostTitle"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewPostGender"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/doggender"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupGenderUpdate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostName" />

    <RadioGroup
        android:id="@+id/radioGroupGenderUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewPostGender"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostName">

        <RadioButton
            android:id="@+id/radioButtonMaleUpdate"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="onRadioClicked"
            android:text="@string/male"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonFemaleUpdate"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="onRadioClicked"
            android:text="@string/female"
            android:textSize="16sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/dogage"
        android:contentDescription="@string/dogage"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/spinnerWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBreed" />

    <Spinner
        android:id="@+id/spinnerHeight"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dogheight"
        app:layout_constraintEnd_toStartOf="@+id/spinnerLength"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAge" />

    <Spinner
        android:id="@+id/spinnerLength"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/doglength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinnerHeight"
        app:layout_constraintTop_toBottomOf="@+id/spinnerWeight" />

    <Button
        android:id="@+id/buttonPostCreate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/addpost"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerWeight"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dogweight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinnerAge"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBreed" />

    <Spinner
        android:id="@+id/spinnerBreed"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dogbreed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostGender" />

</androidx.constraintlayout.widget.ConstraintLayout>