<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="#9C9C9C"
            android:onClick="addBtn"
            android:text="@string/addpost"
            android:textColor="#050505"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:backgroundTint="#9C9C9C"
            android:onClick="editBtn"
            android:text="@string/editpost"
            android:textColor="#050505"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:backgroundTint="#9C9C9C"
            android:onClick="deleteBtn"
            android:text="@string/removepost"
            android:textColor="#050505"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/signoutButton"
            android:layout_width="220dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="#9C9C9C"
            android:onClick="onClickSignout"
            android:text="@string/signout"
            android:textColor="#040404"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:backgroundTint="#9C9C9C"
            android:onClick="backBtn"
            android:text="@string/back"
            android:textColor="#040404"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="dibanez.example.info6134_group7.RecyclerViewFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>